<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item android:title="@string/navigation">
        <menu>
            <group android:checkableBehavior="single">
                <item android:id="@+id/nav_budget"
                    android:icon="@drawable/ic_baseline_attach_money_24"
                    android:title="@string/budget"/>
                <item android:id="@+id/nav_calendar"
                    android:icon="@drawable/ic_baseline_calendar_today_24"
                    android:title="@string/calendar"/>
                <item android:id="@+id/nav_monthly_overview"
                    android:icon="@drawable/ic_baseline_bar_chart_24"
                    android:title="@string/monthly_overview"/>
            </group>
        </menu>
    </item>

    <item android:title="@string/options">
        <menu>
            <group android:checkableBehavior="single">
                <item android:id="@+id/nav_settings"
                    android:icon="@drawable/ic_baseline_settings_24"
                    android:title="@string/settings"/>
                <item android:id="@+id/nav_info"
                    android:icon="@drawable/ic_baseline_info_24"
                    android:title="@string/info"/>
            </group>
        </menu>
    </item>

</menu>