<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3">

        <RadioButton
            android:id="@+id/rbn_light_mode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rbn_light" />

        <RadioButton
            android:id="@+id/rbn_dark_mode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rbn_dark" />

        <RadioButton
            android:id="@+id/rbn_follow_system"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rbn_system_default" />

    </RadioGroup>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textView3"
        style="@style/Theme.FinanceHelperV2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:text="@string/txt_choose_design"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>