<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.InfoActivity">

    <androidx.drawerlayout.widget.DrawerLayout
        android:id="@+id/drawer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="28dp"
        tools:layout_editor_absoluteY="0dp">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="55dp">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/txt_app_info_header"
                style="@style/Theme.FinanceHelperV2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginTop="20dp"
                android:text="@string/info_category_header"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/textView5"
                style="@style/Theme.FinanceHelperV2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginTop="10dp"
                android:text="@string/info_version_desc"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_app_info_header" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/textView6"
                style="@style/Theme.FinanceHelperV2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/info_app_version"
                android:textSize="14sp"
                app:layout_constraintStart_toEndOf="@+id/textView5"
                app:layout_constraintTop_toBottomOf="@+id/txt_app_info_header" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/textView7"
                style="@style/Theme.FinanceHelperV2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginTop="10dp"
                android:text="@string/info_release_date_desc"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView5" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/textView8"
                style="@style/Theme.FinanceHelperV2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginTop="10dp"
                android:text="@string/info_developer_desc"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView7" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/textView9"
                style="@style/Theme.FinanceHelperV2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/info_release_date"
                android:textSize="14sp"
                app:layout_constraintStart_toEndOf="@+id/textView7"
                app:layout_constraintTop_toBottomOf="@+id/textView6" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/textView10"
                style="@style/Theme.FinanceHelperV2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/info_developer"
                android:textSize="14sp"
                app:layout_constraintStart_toEndOf="@+id/textView8"
                app:layout_constraintTop_toBottomOf="@+id/textView9" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/textView11"
                style="@style/Theme.FinanceHelperV2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginTop="30dp"
                android:text="@string/info_support_header"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView8" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginTop="10dp"
                android:textSize="14sp"
                style="@style/Theme.FinanceHelperV2"
                android:text="@string/info_contact_support"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView11" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/txt_support_mail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                style="@style/Theme.FinanceHelperV2"
                android:textSize="14sp"
                android:text="@string/info_contact_email"
                android:textColor="@color/dark_blue"
                app:layout_constraintStart_toEndOf="@+id/textView12"
                app:layout_constraintTop_toBottomOf="@+id/textView11" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.navigation.NavigationView
            android:id="@+id/nav_view"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:fitsSystemWindows="true"
            android:textSize="14sp"
            app:headerLayout="@layout/drawer_header_layout"
            app:menu="@menu/drawer_menu"></com.google.android.material.navigation.NavigationView>
    </androidx.drawerlayout.widget.DrawerLayout>

    <include layout="@layout/toolbar_layout"
        android:id="@+id/custom_toolbar"/>

</androidx.constraintlayout.widget.ConstraintLayout>